<resources>
    <string name="app_name">Babam Radyo</string>

    <string name="tab_radio">Radyo</string>
    <string name="tab_search">Müzik Ara</string>
    <string name="tab_downloads">İndirilenler</string>

    <string name="search_hint_radio">İstasyon ara (boş bırak: Türkiye listesi)</string>
    <string name="search_hint_music">Şarkı veya sanatçı ara</string>
    <string name="search">Ara</string>

    <string name="loading">Yükleniyor…</string>
    <string name="empty_radio">İstasyon bulunamadı.</string>
    <string name="empty_music">Aramak istediğin şarkının adını yaz ve “Ara”ya bas.</string>
    <string name="empty_downloads">Henüz indirilmiş şarkı yok.\n“Müzik Ara” sekmesinden beğendiğin şarkının yanındaki indirme düğmesine bas.</string>

    <string name="download">İndir</string>
    <string name="downloaded">İndirildi</string>
    <string name="delete">Sil</string>
    <string name="deleted">Silindi</string>
    <string name="downloading">İndiriliyor</string>
    <string name="download_done">İndirildi, artık internetsiz dinleyebilirsin</string>
    <string name="download_failed">İndirilemedi</string>
    <string name="live">CANLI</string>

    <string name="fm_radio">FM Radyo</string>
    <string name="fm_not_found">Bu telefonda dahili FM radyo uygulaması bulunamadı. FM radyo için telefonda FM anten çipi ve kulaklık girişine takılı kablolu kulaklık gerekir. Bunun yerine “Radyo” sekmesinden internet üzerinden yayın dinleyebilirsin.</string>
    <string name="fm_headset_hint">FM radyo açılıyor. Anten görevi görmesi için kablolu kulaklığı takmayı unutma.</string>

    <string name="no_tracks">Bu kayıtta çalınabilir mp3 bulunamadı.</string>
    <string name="error_network">Bağlantı hatası. İnternetini kontrol edip tekrar dene.</string>
    <string name="play_pause">Çal / Duraklat</string>
    <string name="nothing_playing">Çalan bir şey yok</string>

    <string name="favorite_add">Favorilere ekle</string>
    <string name="favorite_remove">Favorilerden çıkar</string>
    <string name="favorited">Favorilere eklendi</string>
    <string name="unfavorited">Favorilerden çıkarıldı</string>
    <string name="section_favorites">★ Favorilerim</string>
    <string name="section_all_stations">Tüm istasyonlar</string>

    <string name="reconnecting">Bağlantı koptu, yeniden bağlanılıyor…</string>
    <string name="stream_failed">Yayına ulaşılamıyor: %1$s</string>
    <string name="cancel_download">İndirmeyi iptal et</string>
    <string name="download_cancelled">İndirme iptal edildi</string>

    <string name="sleep_timer">Uyku zamanlayıcı</string>
    <string name="sleep_timer_off">Kapalı</string>
    <string name="sleep_timer_set">Müzik %1$s sonra duracak</string>
    <string name="sleep_timer_cancelled">Uyku zamanlayıcı kapatıldı</string>
    <string name="sleep_timer_running">Kalan: %1$s</string>
    <string name="sleep_timer_finished">Uyku zamanlayıcı: müzik durduruldu</string>
    <string name="previous">Önceki</string>
    <string name="next">Sonraki</string>

    <string name="channel_downloads">İndirmeler</string>
    <string name="downloading_count">%1$d şarkı indiriliyor</string>
    <string name="show_all_stations">Tüm istasyonları göster</string>
    <string name="clear_search">Aramayı temizle</string>
    <string name="search_results">Arama sonuçları</string>

    <string name="section_youtube">YouTube</string>
    <string name="section_archive">Arşiv kayıtları</string>
    <string name="youtube_unavailable">YouTube sunucusuna ulaşılamadı, sadece arşiv sonuçları gösteriliyor</string>
    <string name="no_results">“%1$s” için sonuç bulunamadı.</string>
</resources>
